// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Post Basic 1`] = `
<div
  className="css-1okj3ks-MuiStack-root"
>
  <a
    className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1v8iln7-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
  >
    <img
      alt="some alt text"
      className="MuiBox-root css-1yvukyl"
      src="https://picsum.photos/1920/1080"
    />
  </a>
  <span
    className="MuiTypography-root MuiTypography-caption css-1g32ni6-MuiTypography-root"
  >
    June 13, 1993
  </span>
  <a
    className="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-s7pgp9-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
  >
    Some Title Goes Here
  </a>
  <p
    className="MuiTypography-root MuiTypography-body1 css-fik8n3-MuiTypography-root"
  >
    Sint laboris qui ut laboris fugiat proident laborum cupidatat commodo cupidatat mollit incididunt. Duis eu fugiat quis ipsum non enim adipisicing. Ea voluptate labore minim dolore occaecat nulla culpa sint nisi velit enim sunt reprehenderit consectetur. Minim pariatur fugiat esse quis Lorem mollit labore elit tempor duis anim quis elit cupidatat. Adipisicing excepteur qui ad id id laborum officia ullamco eiusmod dolor consequat sunt dolore mollit. Consectetur amet sint sit occaecat velit laboris ea irure ut dolor est. Laboris mollit et ullamco consequat elit irure sit dolore amet qui culpa minim incididunt deserunt.
  </p>
</div>
`;

exports[`Storyshots Components/Post Minimal 1`] = `
<div
  className="css-1okj3ks-MuiStack-root"
>
  <a
    className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1v8iln7-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
  >
    <img
      alt="some alt text"
      className="MuiBox-root css-1yvukyl"
      src="https://picsum.photos/1920/1080"
    />
  </a>
  <span
    className="MuiTypography-root MuiTypography-caption css-1g32ni6-MuiTypography-root"
  >
    June 13, 1993
  </span>
  <a
    className="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-s7pgp9-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
  >
    Some Title Goes Here
  </a>
</div>
`;
